--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
   <!-- Main Container -->
   <div class="main-container">
-    <!-- Sidebar for Filters (starts closed) -->
-    <aside class="sidebar closed">
+    <!-- Sidebar for Filters (initially hidden as an overlay) -->
+    <aside class="sidebar">
       <h2>Filters</h2>
       <form id="filters-form">
         <!-- Stellar Class Parent Category -->
@@ -37,22 +37,11 @@
           <legend class="collapsible" aria-expanded="false">Size</legend>
           <div class="filter-content">
             <div class="filter-item">
-              <input
-                type="radio"
-                id="size-stellar-class"
-                name="size"
-                value="stellar-class"
-                checked
-              />
+              <input type="radio" id="size-stellar-class" name="size" value="stellar-class" checked />
               <label for="size-stellar-class">Stellar Class-Based</label>
             </div>
             <div class="filter-item">
-              <input
-                type="radio"
-                id="size-distance"
-                name="size"
-                value="distance"
-              />
+              <input type="radio" id="size-distance" name="size" value="distance" />
               <label for="size-distance">Distance-Based</label>
             </div>
           </div>
@@ -63,31 +52,15 @@
           <legend class="collapsible" aria-expanded="false">Color</legend>
           <div class="filter-content">
             <div class="filter-item">
-              <input
-                type="radio"
-                id="color-stellar-class"
-                name="color"
-                value="stellar-class"
-                checked
-              />
+              <input type="radio" id="color-stellar-class" name="color" value="stellar-class" checked />
               <label for="color-stellar-class">Stellar Class-Based</label>
             </div>
             <div class="filter-item">
-              <input
-                type="radio"
-                id="color-constellation"
-                name="color"
-                value="constellation"
-              />
+              <input type="radio" id="color-constellation" name="color" value="constellation" />
               <label for="color-constellation">Constellation</label>
             </div>
             <div class="filter-item">
-              <input
-                type="radio"
-                id="color-galactic-plane"
-                name="color"
-                value="galactic-plane"
-              />
+              <input type="radio" id="color-galactic-plane" name="color" value="galactic-plane" />
               <label for="color-galactic-plane">Galactic Plane</label>
             </div>
           </div>
@@ -98,22 +71,11 @@
           <legend class="collapsible" aria-expanded="false">Opacity</legend>
           <div class="filter-content">
             <div class="filter-item">
-              <input
-                type="radio"
-                id="opacity-absolute-mag"
-                name="opacity"
-                value="absolute-magnitude"
-                checked
-              />
+              <input type="radio" id="opacity-absolute-mag" name="opacity" value="absolute-magnitude" checked />
               <label for="opacity-absolute-mag">Absolute Magnitude-Based</label>
             </div>
             <div class="filter-item">
-              <input
-                type="radio"
-                id="opacity-75"
-                name="opacity"
-                value="75"
-              />
+              <input type="radio" id="opacity-75" name="opacity" value="75" />
               <label for="opacity-75">75% Opacity</label>
             </div>
           </div>
@@ -124,22 +86,11 @@
           <legend class="collapsible" aria-expanded="false">Stars Shown</legend>
           <div class="filter-content">
             <div class="filter-item">
-              <input
-                type="radio"
-                id="stars-shown-all"
-                name="stars-shown"
-                value="all"
-                checked
-              />
+              <input type="radio" id="stars-shown-all" name="stars-shown" value="all" checked />
               <label for="stars-shown-all">All Stars</label>
             </div>
             <div class="filter-item">
-              <input
-                type="radio"
-                id="stars-shown-visible"
-                name="stars-shown"
-                value="visible"
-              />
+              <input type="radio" id="stars-shown-visible" name="stars-shown" value="visible" />
               <label for="stars-shown-visible">Visible Stars (Magnitude ≤ 6)</label>
             </div>
           </div>
@@ -150,23 +101,11 @@
           <legend class="collapsible" aria-expanded="false">Connections (LY)</legend>
           <div class="filter-content">
             <div class="filter-item">
-              <input
-                type="checkbox"
-                id="enable-connections"
-                name="enable-connections"
-              />
+              <input type="checkbox" id="enable-connections" name="enable-connections" />
               <label for="enable-connections">Enable Connections</label>
             </div>
             <div class="filter-item">
-              <input
-                type="range"
-                id="connection-slider"
-                name="connections"
-                min="1"
-                max="50"
-                value="7"
-                disabled
-              />
+              <input type="range" id="connection-slider" name="connections" min="1" max="50" value="7" disabled />
               <span id="connection-value">7</span> Light Years
             </div>
           </div>
@@ -177,75 +116,41 @@
           <legend class="collapsible" aria-expanded="false">Density Mapping</legend>
           <div class="filter-content">
             <div class="filter-item">
-              <input
-                type="checkbox"
-                id="enable-density-mapping"
-                name="enable-density-mapping"
-              />
+              <input type="checkbox" id="enable-density-mapping" name="enable-density-mapping" />
               <label for="enable-density-mapping">Enable Density Mapping</label>
             </div>
             <div class="filter-item">
               <label>Isolation Distance (LY): <span id="density-value">7</span> LY</label>
-              <input
-                type="range"
-                id="density-slider"
-                name="density"
-                min="1"
-                max="20"
-                value="7"
-                disabled
-              />
+              <input type="range" id="density-slider" name="density" min="1" max="20" value="7" disabled />
             </div>
             <div class="filter-item">
               <label>Ignore this many closest stars: <span id="tolerance-value">0</span></label>
-              <input
-                type="range"
-                id="tolerance-slider"
-                name="tolerance"
-                min="0"
-                max="10"
-                value="0"
-                disabled
-              />
+              <input type="range" id="tolerance-slider" name="tolerance" min="0" max="10" value="0" disabled />
             </div>
           </div>
         </fieldset>
 
-        <!-- Constellations Fieldset (unchanged) -->
+        <!-- Constellations Fieldset -->
         <fieldset>
           <legend class="collapsible" aria-expanded="false">Constellations</legend>
           <div class="filter-content">
             <div class="filter-item">
-              <input
-                type="checkbox"
-                id="show-constellation-boundaries"
-                name="show-constellation-boundaries"
-                checked
-              />
+              <input type="checkbox" id="show-constellation-boundaries" name="show-constellation-boundaries" checked />
               <label for="show-constellation-boundaries">Show Constellation Boundaries</label>
             </div>
             <div class="filter-item">
-              <input
-                type="checkbox"
-                id="show-constellation-names"
-                name="show-constellation-names"
-                checked
-              />
+              <input type="checkbox" id="show-constellation-names" name="show-constellation-names" checked />
               <label for="show-constellation-names">Show Constellation Names</label>
             </div>
           </div>
         </fieldset>
 
-        <!-- Globe Surface Fieldset (unchanged) -->
+        <!-- Globe Surface Fieldset -->
         <fieldset>
           <legend class="collapsible" aria-expanded="false">Globe Surface</legend>
           <div class="filter-content">
             <div class="filter-item">
-              <input
-                type="checkbox"
-                id="globe-opaque-surface"
-                name="globe-opaque-surface"
-              />
+              <input type="checkbox" id="globe-opaque-surface" name="globe-opaque-surface" />
               <label for="globe-opaque-surface">Opaque Globe Surface</label>
             </div>
           </div>
@@ -258,12 +163,14 @@
       <!-- True Coordinates Map -->
       <div class="map-container">
         <h2>True Coordinates Map</h2>
+        <button class="fullscreen-btn" aria-label="Fullscreen True Coordinates Map">⤢</button>
         <canvas id="map3D"></canvas>
       </div>
 
       <!-- Globe Map -->
       <div class="map-container">
         <h2>Globe Map</h2>
+        <button class="fullscreen-btn" aria-label="Fullscreen Globe Map">⤢</button>
         <canvas id="sphereMap"></canvas>
       </div>
     </section>
@@ -286,10 +193,10 @@
   <!-- Scripts -->
   <script type="module" src="script.js"></script>
   <script>
-    // Toggle sidebar menu on mobile
+    // Toggle sidebar menu on mobile: toggle the "open" class
     document.getElementById('menu-toggle').addEventListener('click', function() {
       var sidebar = document.querySelector('.sidebar');
-      sidebar.classList.toggle('closed');
+      sidebar.classList.toggle('open');
     });
 
     // Enable/disable connection slider based on checkbox state
@@ -304,6 +211,20 @@
       var toleranceSlider = document.getElementById('tolerance-slider');
       densitySlider.disabled = !this.checked;
       toleranceSlider.disabled = !this.checked;
+    });
+    
+    // Fullscreen button event listeners
+    document.querySelectorAll('.fullscreen-btn').forEach(btn => {
+      btn.addEventListener('click', function() {
+        var mapContainer = this.parentElement;
+        if (document.fullscreenElement) {
+          document.exitFullscreen();
+        } else {
+          mapContainer.requestFullscreen().catch(err => {
+            console.error("Error attempting to enable full-screen mode:", err);
+          });
+        }
+      });
     });
   </script>
 </body>
